[project]
name = "piper-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.1"
dependencies = [
    "pip==24.0",
    "setuptools>=75.8.0",
    "setuptools-cythonize>=1.0.7",
    "taskipy>=1.14.1",
    "cython>=0.29.0,<1",
    "piper-phonemize~=1.1.0",
    "librosa>=0.9.2,<1",
    "numpy==1.24.3",
    "onnxruntime>=1.11.0",
    "pytorch-lightning~=1.7.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchmetrics==0.11.4",
    "argparse>=1.4.0",
]


[tool.taskipy.tasks]
submodule = "git submodule update --init --recursive"
build-monotonic-align = 'cd piper/src/python && ./build_monotonic_align.sh'
preprocess = 'cd piper/src/python && uv run -m piper_train.preprocess'
default-train = 'cd piper/src/python && uv run -m piper_train'
train = 'uv run train.py'

